namespaces/live.cloud-platform.service.justice.gov.uk/la-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "la-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "ask-cloud-platform"
    cloud-platform.justice.gov.uk/application: "laa portal"
    cloud-platform.justice.gov.uk/owner: "Design: jitesh.ladva@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-prototype"
    cloud-platform.justice.gov.uk/team-name: "laa-portal"
    cloud-platform.justice.gov.uk/review-after: ""
